fix: scrollbar css

--- a/public/css/login-cadastro/signin.css
+++ b/public/css/login-cadastro/signin.css
@@ -213,14 +213,25 @@ body {
 
 /* inputs */
 
+ /* width */
 ::-webkit-scrollbar {
-    width: .1vw;
+  width: 10px;
 }
 
-::-webkit-scrollbar-thumb {
-    border-radius: 40vw;
-    background: linear-gradient(180deg, #FF6D4D 0%, #ff0f46 100%);
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+} 
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
